# isochrones-mexico

./: .gitignore  LICENSE.txt  README.md  package-lock.json  package.json
example/dev-bundle/: index.html  index.js  src.77de5100.js  src.77de5100.js.map
example/dev-bundle/data/: starting_points.geojson
example/dev-bundle/data/isochrones/: 622791223406133247.geojson  622791223437492223.geojson  622791223442604031.geojson  622791223444799487.geojson  622791223480877055.geojson  622791223481237503.geojson  622791223512858623.geojson  622791252803485695.geojson  622791252803518463.geojson  622791252804829183.geojson  622791252805615615.geojson  622791252812201983.geojson  622791252813479935.geojson  622791252819771391.geojson  622791252831141887.geojson  622791252834058239.geojson  622791252837040127.geojson  622791252838481919.geojson  622791252839006207.geojson  622791252882653183.geojson  622791252884946943.geojson  622791252899463167.geojson  622791252901986303.geojson  622791252932952063.geojson  622791252933443583.geojson  622791252961755135.geojson  622791252963885055.geojson  622791252964671487.geojson  622791252964868095.geojson  622791252968636415.geojson  622791252970176511.geojson  622791252972371967.geojson  622791252972732415.geojson  622791252991574015.geojson  622791253035220991.geojson  622791253037580287.geojson  622791253042364415.geojson  (+496 more)
gtfs-isochrones/: CMakeLists.txt  Data_model.h  Isochrone_generator.cpp  Isochrone_generator.h  Isochrone_generator.hpp  main.cpp
isochrones computation/: main.cpp
src/: index.html  index.ts  style.css
